# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.28 2008/04/20 19:31:17 nelchael Exp $

*tuxonice-sources-2.6.24-r6 (20 Apr 2008)

  20 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.24-r6.ebuild:
  Revision bump for genpatches-7.

  12 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  -tuxonice-sources-2.6.23.ebuild, -tuxonice-sources-2.6.23-r1.ebuild,
  -tuxonice-sources-2.6.23-r2.ebuild, -tuxonice-sources-2.6.23-r3.ebuild,
  -tuxonice-sources-2.6.23-r4.ebuild, -tuxonice-sources-2.6.23-r5.ebuild,
  -tuxonice-sources-2.6.23-r6.ebuild, -tuxonice-sources-2.6.23-r7.ebuild,
  -tuxonice-sources-2.6.23-r8.ebuild, -tuxonice-sources-2.6.23-r9.ebuild,
  -tuxonice-sources-2.6.23-r10.ebuild, -tuxonice-sources-2.6.24.ebuild,
  -tuxonice-sources-2.6.24-r1.ebuild, -tuxonice-sources-2.6.24-r2.ebuild,
  -tuxonice-sources-2.6.24-r3.ebuild:
  Removed old versions.

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org>
  tuxonice-sources-2.6.23-r11.ebuild, tuxonice-sources-2.6.24-r4.ebuild:
  Stable on x86 (bug #217099)

  10 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  tuxonice-sources-2.6.23-r11.ebuild, tuxonice-sources-2.6.24-r4.ebuild:
  Stable on amd64.

*tuxonice-sources-2.6.24-r5 (10 Apr 2008)

  10 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.24-r5.ebuild:
  Revision bump for genpatches-6.

*tuxonice-sources-2.6.24-r4 (30 Mar 2008)

  30 Mar 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.24-r4.ebuild:
  Revision bump for genpatches-5.

  24 Mar 2008; Markus Meier <maekke@gentoo.org>
  tuxonice-sources-2.6.23-r10.ebuild:
  amd64 stable, bug #202064

  01 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  tuxonice-sources-2.6.23-r10.ebuild, tuxonice-sources-2.6.24-r3.ebuild:
  Use K_EXTRAELOG instead of K_EXTRAEINFO (bug #199464).
