@@ -1,6 +1,17 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.28 2008/04/20 19:31:17 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.29 2008/04/23 15:39:22 nelchael Exp $
+
+*tuxonice-sources-2.6.25-r1 (23 Apr 2008)
+*tuxonice-sources-2.6.25 (23 Apr 2008)
+*tuxonice-sources-2.6.24-r7 (23 Apr 2008)
+*tuxonice-sources-2.6.23-r12 (23 Apr 2008)
+
+  23 Apr 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  +tuxonice-sources-2.6.23-r12.ebuild, +tuxonice-sources-2.6.24-r7.ebuild,
+  +tuxonice-sources-2.6.25.ebuild, +tuxonice-sources-2.6.25-r1.ebuild:
+  Version and revision bumps: new TuxOnIce version - 3.0-rc7, new genpatches
+  versions.
 
 *tuxonice-sources-2.6.24-r6 (20 Apr 2008)
 
